# stars-collaborate

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  README.org
apps/: CMakeLists.txt
apps/advanced/: CMakeLists.txt  (+1 more)
docs/: index.html  index.org  python_args.org  python_args.tex  refman.tex
libs/: CMakeLists.txt
libs/collaborate/src/: CMakeLists.txt  antenna.cpp  antenna_dipole.cpp  antenna_helical.cpp  antenna_isotropic.cpp  antenna_patch.cpp  attitude_matrix.cpp  battery.cpp  channel.cpp  collaborate.cpp  data_logger.cpp  data_processor.cpp  data_processor_sink.cpp  data_processor_source.cpp  data_processor_template.cpp  earth.cpp  earth_data.cpp  event_logger.cpp  geodetic.cpp  graph.cpp  graph_unweighted.cpp  graph_weighted.cpp  modem.cpp  modem_uhf_deploy.cpp  modem_uhf_station.cpp  node.cpp  observing_system.cpp  observing_system_alpha.cpp  orbital_state.cpp  packet.cpp  packet_forward.cpp  packet_raw.cpp  packet_return.cpp  platform.cpp  platform_earth.cpp  platform_orbit.cpp  reference_frame.cpp  scheduler.cpp  scheduler_alpha.cpp  sensor.cpp  (+12 more)
libs/netcdf/src/: CMakeLists.txt  ncAtt.cpp  ncByte.cpp  ncChar.cpp  ncCheck.cpp  ncCompoundType.cpp  ncDim.cpp  ncDouble.cpp  ncEnumType.cpp  ncException.cpp  ncFile.cpp  ncFloat.cpp  ncGroup.cpp  ncGroupAtt.cpp  ncInt.cpp  ncInt64.cpp  ncOpaqueType.cpp  ncShort.cpp  ncString.cpp  ncType.cpp  ncUbyte.cpp  ncUint.cpp  ncUint64.cpp  ncUshort.cpp  ncVar.cpp  ncVarAtt.cpp  ncVlenType.cpp
libs/sgp4/src/: CMakeLists.txt  coord_geodetic.cpp  coord_topocentric.cpp  date_time.cpp  decayed_exception.cpp  eci.cpp  globals.cpp  observer.cpp  orbital_elements.cpp  satellite_exception.cpp  sgp4.cpp  solar_position.cpp  time_span.cpp  tle.cpp  tle_exception.cpp  util.cpp  vector.cpp
sys/: build.sh  clean.sh  memcheck.sh  profile.sh
util/: animate_data.py  animate_map.py  animate_network.py  another.py  combine.py  extract.py  helper_data.py  helper_plot.py  helper_system.py  plot_antenna.py  plot_channel.py  plot_data.py  plot_map.py  plot_measurement.py  plot_measurements.py  plot_network.py  plot_series.py  plot_testing.py
(+641 files in other folders)
