cmake_minimum_required(VERSION 2.8)
project(osse)
set (GEN_DEBUG_INFO TRUE)
set(CMAKE_BUILD_TYPE DEBUG)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS -pthread)
set(LIB_SUFFIX "so")
add_definitions(-g -Wall -std=c++11 -Wextra -pedantic -Werror -Wno-c++0x-compat)
add_subdirectory(libs)
add_subdirectory(apps)
